--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
     <link rel="icon" type="image/png" href="img/techis-logo.png">
@@ -28,7 +29,22 @@
           </div>
         </div>
       </nav>
-    Hello World!
+    <div id="about">
+        <h2><span class="font-primary">A</span>bout</h2>
+        <img src="img/20211022_173538.jpg">
+        <div class="name">Jason Wells</div>
+        <div class="vocation">Web Application Developer</div>
+        <div class="skills">HTML / CSS / JavaScript / React.js / Redux / Python / Django / Express.js / AWS (Basics) / Docker (Basics)</div>
+        <p>
+            I am currently a new student to web development, but I am currently developing my skills!
+        </p>
+        <div class="email">jason.g.wells22@gmail.com</div>
+        <div class="icons">
+            <a href="https://github.com/Jason-Wells22"><i class="bi bi-github"></i></a>
+            <a href="https://www.linkedin.com/in/jason-wells-929695159/"><i class="bi bi-linkedin ms-3"></i></a>
+        </div>
+
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
