--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a class="nav-link font-black" href="#about">About</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link font-black" href="#projects">Projects</a>
+                  <a class="nav-link font-black" href="#project">Projects</a>
               </li>
             </ul>
           </div>
@@ -40,11 +40,59 @@
         </p>
         <div class="email">jason.g.wells22@gmail.com</div>
         <div class="icons">
-            <a href="https://github.com/Jason-Wells22"><i class="bi bi-github"></i></a>
-            <a href="https://www.linkedin.com/in/jason-wells-929695159/"><i class="bi bi-linkedin ms-3"></i></a>
+            <a href="https://github.com/Jason-Wells22" target="_blank"><i class="bi bi-github"></i></a>
+            <a href="https://www.linkedin.com/in/jason-wells-929695159/" target="_blank"><i class="bi bi-linkedin ms-3"></i></a>
         </div>
 
     </div>
+    <div id="project">
+        <h2><span class="font-primary">P</span>roject</h2> 
+        
+        <div class="card mb-3">
+          <div class="row">
+            <div class="col-md-4">
+              <img src="img/project-twitter.png" alt="Twitter Project">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Twitter Clone</h5>
+                <p class="card-text">This is a twitter based project made using Django.</p>
+                <p class="card-text"><small calss="text-muted">
+                  Test Login Account <br>
+                  Email: test@gmail.com <br>
+                  Password : 1234 
+                </small></p>
+                <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
+                <a href="#" target="_blank" class="btn btn-secondary">Github Link</a>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+        </div>
+
+        <div class="card mb-3">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/project-netflix.png" alt="Netflix Project">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Netflix Clone</h5>
+                  <p class="card-text">This is a Netflix based project using HTML / CSS / JS.</p>
+                  <p class="card-text"><small calss="text-muted">
+                    Test Login Account <br>
+                    Email: test@gmail.com <br>
+                    Password : 1234 
+                  </small></p>
+                  <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
+                  <a href="#" target="_blank" class="btn btn-secondary">Github Link</a>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+          </div>
+      </div>
+    </div>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
